--- a/public/about.html
+++ b/public/about.html
@@ -4,7 +4,7 @@
   <!-- Required meta tags-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="../dist/css/app.css">
+  <link rel="stylesheet" href="./css/app.css">
   <body>
     <!-- Header-->
     <header class="header">
@@ -23,14 +23,13 @@
     <!-- /Header-->
     <!-- Page Container-->
     <div class="container">
-      <!-- Home-->
-      <section class="home">
-        <div class="text-center"><img src="../dist/images/pug.png">
-          <h1>Welcome To Home Page.</h1>
-          <p class="lead">You can use &nbsp;<a href="https://html2pug.now.sh" target="_blank">html2pug.now.sh &nbsp;</a>to convert html code to pug.</p>
+      <!-- About-->
+      <section class="about">
+        <div class="text-center"><img src="./images/pug.png">
+          <h1>Welcome To About Page.</h1>
         </div>
       </section>
-      <!-- /Home-->
+      <!-- /About-->
     </div>
     <!-- /Page Container-->
     <!-- Footer-->
@@ -40,6 +39,6 @@
       </div>
     </footer>
     <!-- /Footer-->
-    <script src="../dist/js/app.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
