--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,12 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active"><a class="nav-link" href="./index.html">Home<span class="sr-only">(current)</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="./about.html">About</a></li>
+            <li class="nav-item active"><a class="nav-link" href="./index.html"><i class="fas fa-home mr-2"></i>Home<span class="sr-only">(current)</span></a></li>
+            <li class="nav-item"><a class="nav-link" href="./about.html"><i class="fas fa-question-circle mr-2"></i>About</a></li>
           </ul>
         </div>
       </nav>
-      <!-- Navbar-->
+      <!-- /Navbar-->
     </header>
     <!-- /Header-->
     <!-- Page Container-->
