--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <!-- Required meta tags-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="./css/app.css">
+  <link rel="stylesheet" href="./css/app.css" data-rtl="./css/app.rtl.css" data-ltr="./css/app.css">
   <body>
     <!-- Header-->
     <header class="header">
@@ -15,6 +15,8 @@
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active"><a class="nav-link" href="./index.html"><i class="fas fa-home mr-2"></i>Home<span class="sr-only">(current)</span></a></li>
             <li class="nav-item"><a class="nav-link" href="./about.html"><i class="fas fa-question-circle mr-2"></i>About</a></li>
+            <li class="nav-item"><a class="nav-link" href="javascript:direction('rtl');"><i class="fas fa-question-circle mr-2"></i>RTL Version</a></li>
+            <li class="nav-item"><a class="nav-link" href="javascript:direction('ltr');"><i class="fas fa-question-circle mr-2"></i>LTR Version</a></li>
           </ul>
         </div>
       </nav>
