--- a/public/about.html
+++ b/public/about.html
@@ -15,8 +15,8 @@
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active"><a class="nav-link" href="./index.html"><i class="fas fa-home mr-2"></i>Home<span class="sr-only">(current)</span></a></li>
             <li class="nav-item"><a class="nav-link" href="./about.html"><i class="fas fa-question-circle mr-2"></i>About</a></li>
-            <li class="nav-item"><a class="nav-link" href="javascript:direction('rtl');"><i class="fas fa-question-circle mr-2"></i>RTL Version</a></li>
-            <li class="nav-item"><a class="nav-link" href="javascript:direction('ltr');"><i class="fas fa-question-circle mr-2"></i>LTR Version</a></li>
+            <li class="nav-item"><a class="nav-link btn-rtl" href="javascript:direction('rtl');">RTL Version</a></li>
+            <li class="nav-item"><a class="nav-link btn-ltr" href="javascript:direction('ltr');">LTR Version</a></li>
           </ul>
         </div>
       </nav>
