--- a/public/index.html
+++ b/public/index.html
@@ -1,47 +1,36 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <title>Front End Scaffolding</title>
-  <!-- Required meta tags-->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="./css/app.css" data-rtl="./css/app.rtl.css" data-ltr="./css/app.css">
-  <body>
+<title>Front End Scaffolding</title>
+<!-- Required meta tags-->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<link rel="stylesheet" href="./css/app.css">
+<body>
+<div id="app" class="flex flex-col h-screen">
     <!-- Header-->
-    <header class="header">
-      <!-- Navbar-->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light"><a class="navbar-brand" href="./index.html"><i class="fab fa-bootstrap fa-lg mr-2"></i>Front End Scaffolding</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active"><a class="nav-link" href="./index.html"><i class="fas fa-home mr-2"></i>Home<span class="sr-only">(current)</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="./about.html"><i class="fas fa-question-circle mr-2"></i>About</a></li>
-            <li class="nav-item"><a class="nav-link btn-rtl" href="javascript:direction('rtl');">RTL Version</a></li>
-            <li class="nav-item"><a class="nav-link btn-ltr" href="javascript:direction('ltr');">LTR Version</a></li>
-          </ul>
-        </div>
-      </nav>
-      <!-- /Navbar-->
+    <header>
+        <!-- Navbar-->
+
+        <!-- /Navbar-->
     </header>
     <!-- /Header-->
     <!-- Page Container-->
-    <div class="container">
-      <!-- Home-->
-      <section class="home">
-        <div class="text-center"><img src="./images/pug.png">
-          <h1>Welcome To Home Page.</h1>
-          <p class="lead">You can use &nbsp;<a href="https://html2pug.now.sh" target="_blank">html2pug.now.sh &nbsp;</a>to convert html code to pug.</p>
-        </div>
-      </section>
-      <!-- /Home-->
+    <div class="h-full w-full">
+        <!-- Home-->
+        <section class="flex items-center justify-center h-full w-full">
+            <example-component></example-component>
+        </section>
+        <!-- /Home-->
     </div>
     <!-- /Page Container-->
     <!-- Footer-->
     <footer class="footer">
-      <div class="my-4">
-        <p class="text-center text-muted">All right received &copy; 2019.</p>
-      </div>
+        <div class="my-4">
+            <p class="text-center text-muted">All right received &copy; 2020.</p>
+        </div>
     </footer>
     <!-- /Footer-->
-    <script src="./js/app.js"></script>
-  </body>
+</div>
+<script src="./js/app.js"></script>
+</body>
 </html>
