--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <!-- Footer-->
     <footer class="footer">
         <div class="my-4">
-            <p class="text-center text-muted">All right received &copy; 2020.</p>
+            <p class="text-center text-gray-400">All right received &copy; 2020.</p>
         </div>
     </footer>
     <!-- /Footer-->
