--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,11 @@
 <div id="app" class="flex flex-col h-screen">
     <!-- Header-->
     <header>
-        <!-- Navbar-->
-
-        <!-- /Navbar-->
+        <navbar></navbar>
     </header>
     <!-- /Header-->
     <!-- Page Container-->
-    <div class="h-full w-full">
+    <div class="mt-4 h-full w-full">
         <!-- Home-->
         <section class="flex items-center justify-center h-full w-full">
             <example-component></example-component>
