--- a/public/index.html
+++ b/public/index.html
@@ -6,25 +6,56 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="./css/app.css">
 <body>
-<div id="app" class="flex flex-col h-screen">
+<div id="app">
     <!-- Header-->
     <header>
-        <navbar></navbar>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light navGad">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Dropdown
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
     </header>
     <!-- /Header-->
     <!-- Page Container-->
-    <div class="mt-4 h-full w-full">
-        <!-- Home-->
-        <section class="flex items-center justify-center h-full w-full">
-            <example-component></example-component>
-        </section>
-        <!-- /Home-->
+    <div>
+
     </div>
     <!-- /Page Container-->
     <!-- Footer-->
     <footer class="footer">
-        <div class="my-4">
-            <p class="text-center text-gray-400">All right received &copy; 2020.</p>
+        <div>
+            <p class="text-center text-muted">All right received &copy; 2020.</p>
         </div>
     </footer>
     <!-- /Footer-->
